--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,11 @@ body {
     align-items: center;
 }
 
+.form {
+    display: flex;
+    align-items: center;
+}
+
 .content {
     display: flex;
     flex-wrap: wrap;
@@ -54,4 +59,15 @@ body {
     width: 100px;
     height: 100px;
     border: 2px solid orangered;
+}
+
+.btn {
+    margin: 50px;
+    width: 150px;
+    height: 50px;
+    background-color: #4CAF50;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 15px;
 }
