--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,12 @@ body {
 }
 
 
-.row {
+.cell {
     width: 100px;
     height: 100px;
     border: 2px solid orangered;
+    font-size: 26px;
+    text-align: center;
 }
 
 .btn {
@@ -70,4 +72,19 @@ body {
     text-align: center;
     font-size: 20px;
     border-radius: 15px;
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    cursor: unset;
+}
+
+.btn:hover {
+    background-color: #f5f8f1;
+    color: #07ad0d;
+    font-size: 25px;
+}
+
+
+.svg {
+    height: 100px;
+    width: 100px;
 }
