--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,12 @@ img{vertical-align: top;}
     font-size: 25px;
 }
 
+.btn:active {
+  background-color: #ad2e2e;
+  color: #000000;
+  font-size: 15px;
+}
+
 .svg {
     height: 100px;
     width: 100px;
